--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,8 +8,9 @@
         <ul>
             {{#each articles}}
             <li>
+                <p><img src="{{this.img}}" alt=""></p>
                 <p><span>Title:</span> {{this.title}}</p>
-                <p><a href="{{this.link}}" target="_blank">Link to the article</a></p>
+                <p><a href="{{this.link}}" target="_blank">Read the article</a></p>
                 <button class="btn save" data-id="{{this.id}}">Save This Article</button>
             </li>
             <hr>
