Added routs and schema for notes

--- a/views/saved-articles.handlebars
+++ b/views/saved-articles.handlebars
@@ -14,3 +14,15 @@
         </ul>
     </div>
 </div>
+
+<!-- Modal Structure -->
+<div id="modal2" class="modal">
+    <div class="modal-content">
+        <h4>Notes</h4>
+        <div class="notes"></div>
+        <input placeholder="Type Note here" type="text" class="note-body">
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class="modal-close waves-effect waves-green btn-flat save-note">Save Note</a>
+    </div>
+</div>
