--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
 
 <body>
     <nav>
-        <div class="nav-wrapper">
+        <div class="nav-wrapper blue-grey darken-4">
             <a href="/" class="brand-logo">Mongo Scraper</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li>
